# Ros2Debugger

./: README.md
debugger/: debug_define_functions.bash  debug_init_variables_and_constants.bash  launch_debug3.bash  launch_file_to_be_used_by_debugger.json  launch_file_to_be_used_by_debugger_minimal.json  state_machine.bash
materials/: launch.json.original
src/my_package/: CMakeLists.txt  package.xml
src/my_package/src/: my_node  my_node.cpp
src/my_test/: CMakeLists.txt  package.xml
src/my_test/src/: my_node.cpp  t1.cpp
src/p2/: CMakeLists.txt  package.xml
src/p2/src/: n2.cpp
src/p3/: CMakeLists.txt  package.xml
src/p3/src/: n3.cpp
src/p4/: CMakeLists.txt  package.xml
src/p4/src/: n4.cpp
src/p5/: CMakeLists.txt  package.xml
src/p5/launch/: p5_launch.py  p7_launch.py.
src/p5/src/: n5.cpp
src/p6/: CMakeLists.txt  package.xml
src/p6/src/: n6.cpp  n6_copy.cpp
src/p7/: CMakeLists.txt  package.xml
src/p7/launch/inter_med/inter2/: p7_launch.py
src/p7/src/: n7.cpp  n7_copy.cpp  n7_copy2.cpp
